# cookbook

./: README.md  pyproject.toml
1_quickstarts/: Preview_Quickstart_instruct_model.ipynb  Preview_Quickstart_reasoning_model.ipynb  Quickstart_Foundation-Sec-8B.ipynb  Quickstart_instruct_model.ipynb  Quickstart_reasoning_model.ipynb  README.md  recommended_system_prompt_for_instruct_model.txt
2_examples/: Alert_Prioritization.ipynb  Build_Environment_Security.ipynb  Classification_cybersecurity_descriptions.ipynb  Configuration_Assessment.ipynb  Exploit_Generation.ipynb  IncidentInvestigation_EndtoEnd.ipynb  IncidentSummarization.ipynb  Incident_Investigation_e2e.ipynb  Incident_Summarization.ipynb  Mech_Interp.ipynb  Mitre_Mapping_Detection_Plays.ipynb  Needle_in_the_Logstack.ipynb  OSINT_reporting.ipynb  README.md  RedTeamPlanning.ipynb  Redteam_Planning.ipynb  Root_Cause_Analysis.ipynb  Security_Log_Analysis.ipynb  Simple_Q&A.ipynb  YARA_patterns.ipynb  Zero_Shot_Classification.ipynb  inference_clients.py
2_examples/data/: richard_access_events.csv
3_adoptions/: README.md
3_adoptions/deployment/: README.md
3_adoptions/deployment/baseten/: README.md  inference_reasoning_model.ipynb
3_adoptions/finetuning/: README.md  finetuning_causal_ml.ipynb  finetuning_classification_head.ipynb  finetuning_demo_cti_hal.ipynb  finetuning_demo_cti_vsp.ipynb
3_adoptions/integrations/: structured_outputs.ipynb
3_adoptions/quantization/: README.md  quantization.ipynb
4_documents/: FAQ.md  README.md  Reference.md
4_documents/models_as_malware/: README.md  Workshop.ipynb
(+21 files in other folders)
