[project]
name = "foundation-ai-cookbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.45",
    "datasets>=3.6.0",
    "evaluate>=0.4.4",
    "huggingface-hub>=0.33.1",
    "ipython>=8.18.1",
    "jupyter>=1.1.1",
    "llama-cpp-python>=0.3.9",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "peft>=0.15.2",
    "requests>=2.32.4",
    "sagemaker>=2.247.1",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "trl>=0.19.0",
    "yara>=1.7.7",
]
